[gd_scene load_steps=3 format=3 uid="uid://m5nh0px6kl3k"]

[ext_resource type="Script" uid="uid://bt6be0mqecuy" path="res://ui/combat_log.gd" id="1_185fx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mv0en"]
bg_color = Color(0, 0, 0, 0.6666667)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.26666668)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CombatLog" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_mv0en")
script = ExtResource("1_185fx")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Combat Log"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Clear"

[node name="ToggleButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Hide"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LogText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
fit_content = true
scroll_following = true
